# alpha_bot

./: .gitignore  README.md  Untitled.json  alpha_bot.session.sql  alpha_logging.py  pyproject.toml
alpha_bot/: alpha_bot.sqlproj
collector/: alpha_watch.py  collector.py  models.py  parser.py  reminder.py  state.py  timeutil.py
config/: settings.example.env  settings.py
deploy/: Dockerfile  bootstrap.sh  cron.example  docker-compose.yaml  schema.sql
notifier/: dispatch.py  spug.py
persistence/: database.py  repository.py
tests/: test_collector_live.py  test_parser.py  test_reminder.py  test_timeutil.py
tests/fixtures/: airdrop.html  airdrop.json  empty.html
