[project]
name = "alpha-reminder"
version = "0.1.0"
description = "Alpha exchange listing reminder bot using Playwright scraping and Spug notifications."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "playwright>=1.44",
    "requests>=2.31",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
    "tenacity>=8.2",
    "structlog>=24.1",
    "beautifulsoup4>=4.12",
    "aiomysql>=0.2.0",
    "tzdata>=2024.1 ; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
]

[tool.black]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["collector", "config", "notifier", "persistence"]
py-modules = ["alpha_logging"]
